fix alignment

--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -40,7 +40,7 @@
 
 .user-description { 
   width: 50%;
-  text-align: left;
+  text-align: center;
   margin: 0 auto;	
 }
 
